# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../audio_ohcore.gni")
import("../../../config.gni")

ohos_shared_library("audio_capturer_gateway") {
  install_enable = true

  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags

  include_dirs = [
    "../../../interfaces/inner_api/native/audiocommon/include",
    "../../../interfaces/inner_api/native/audiocapturer/include",
  ]

  include_dirs += audio_gateway_include_dirs

  sources = audio_capturer_gateway_sources

  deps = [
    "../../../services/audio_policy:audio_policy_client",
    "../../../services/audio_service:audio_client",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "audio_framework"
  subsystem_name = "multimedia"
}

ohos_shared_library("audio_renderer_gateway") {
  install_enable = true

  cflags = [ "-fPIC" ]
  cflags_cc = cflags

  include_dirs = [
    "../../../interfaces/inner_api/native/audiocommon/include",
    "../../../interfaces/inner_api/native/audiorenderer/include",
  ]

  include_dirs += audio_gateway_include_dirs

  sources = audio_renderer_gateway_sources

  deps = [
    "../../../services/audio_policy:audio_policy_client",
    "../../../services/audio_service:audio_client",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "audio_framework"
  subsystem_name = "multimedia"
}
