# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../audio_ohcore.gni")
import("../../../config.gni")

pulseaudio_dir = "//third_party/pulseaudio"

config("audio_effect_config") {
  include_dirs = [
    "include",
    "../audiostream/include",
    "../../../interfaces/inner_api/native/audiorenderer/include",
    "../../../interfaces/inner_api/native/audiocommon/include",
    "../../../interfaces/inner_api/native/audiomanager/include",
    "../../../services/audio_service/client/include",
    "../../../services/audio_service/test/example",
    "$pulseaudio_dir/src",
    "$pulseaudio_dir/confgure/src",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]
}

ohos_shared_library("audio_effect") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "../../../cfi_blocklist.txt"
  }
  install_enable = true

  configs = [ ":audio_effect_config" ]

  # include_dirs = audio_gateway_include_dirs
  # include_dirs += [ multimedia_audio_framework_pulse_audio ]

  sources = [ "src/audio_effect_chain_manager.cpp" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  version_script = "../../../audio_framework.versionscript"

  part_name = "audio_framework"
  subsystem_name = "multimedia"
}
